@@ -15,24 +15,24 @@ namespace Pds {
   public:
     ObserverLevel(unsigned    platform,
 		  const char* partition,
-		  unsigned    node,
+		  unsigned    nodes,
 		  EventCallback& callback);
     virtual ~ObserverLevel();
   
     bool attach();
     void detach();
 
-    void allocated(const Allocation&, unsigned);
+    void allocated(const Allocation&);
     void dissolved();
   private:  
     void     post      (const Transition&);
     void     post      (const InDatagram&);
 
   private:
-    unsigned       _node;
-    EventCallback& _callback;         // object to notify
+    unsigned          _nodes;
+    EventCallback&    _callback;         // object to notify
     ObserverStreams * _streams;          // appliance streams
-    OutletWire*    _outlets[StreamParams::NumberOfStreams];
+    OutletWire*       _outlets[StreamParams::NumberOfStreams];
 };
 
 }
